--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,6 @@ clap = "~2.27.0"
 aes-gcm = "0.8.0"
 cid = "*"
 multihash = "*"
-serde_cbor = "0.10"
 serde = { version = "1.0", features = ["derive"] }
-
+serde_json = "1.0"
+serde_cbor = "0.10"
